# mantisbase

./: .dockerignore  .gitignore  .gitmodules  404.html  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  FOREIGN_KEY_API_FLOW.md  README.md  api.html  auth.html  configuration.html  contributing.html  doxide.yaml  install.html  intro.html  print.html  realtime.html  searchindex.js  searchindex.json
.github/workflows/: README.md  build-matrix.yml  ci.yml  docker-publish.yml  docs-mdbook.yml  docs.yml  openapi-sdk.yml  release.yml  rust-ci.yml
admin/: index.html  package.json  vite.config.ts
admin/src/: main.ts
cmake/: FindJsoncpp.cmake  add-asan.cmake  add-bcrypt.cmake  add-cmrc.cmake  add-doxygen.cmake  add-drogon.cmake  add-duktape.cmake  add-httplib.cmake  add-json.cmake  add-mbs.cmake  add-semver.cmake  add-soci.cmake  add-tests.cmake  add-wolfssl.cmake  add-zlib.cmake  asan.cmake
data/templates/: README.txt
doc/: 00.installation.md  01.cmd.md  02.api.md  02.auth.md  03.rules.md  04.architecture.md  05.embedding.md  06.docker.md  10.sync.md  11.files.md  12.healthcheck.md  13.scripting.md  Doxyfile.in  QuickStart.md
docker/: Dockerfile  docker-compose.yaml
docs/: .gitignore  00_8installation_8md.html  01_8cmd_8md.html  02_8api_8md.html  02_8auth_8md.html  03_8rules_8md.html  05_8embedding_8md.html  06_8docker_8md.html  11_8files_8md.html  12_8healthcheck_8md.html  13_8scripting_8md.html  CNAME  QuickStart_8md.html  access__rules_8cpp.html  access__rules_8cpp__incl.map  access__rules_8cpp__incl.md5  access__rules_8h.html  access__rules_8h.js  access__rules_8h__dep__incl.map  access__rules_8h__dep__incl.md5  access__rules_8h__incl.map  access__rules_8h__incl.md5  access__rules_8h_source.html  annotated.html  annotated_dup.js  auth_8cpp.html  auth_8cpp__incl.map  auth_8cpp__incl.md5  auth_8h.html  auth_8h.js  auth_8h__dep__incl.map  auth_8h__dep__incl.md5  auth_8h__incl.map  auth_8h__incl.md5  auth_8h_source.html  auth__utils_8cpp.html  auth__utils_8cpp.js  auth__utils_8cpp__incl.map  auth__utils_8cpp__incl.md5  auth_api.html  (+600 more)
docs/adr/: 001-realtime.md
docs/api/: Auth.md  ContextStore.md  Database.md  Files.md  KeyValStore.md  MantisBase.md  MantisContentReader.md  MantisException.md  MantisRequest.md  MantisResponse.md  index.md
docs/content/: index.md
docs/content/guides/: api.md  auth.md  cmd.md  docker.md  embedding.md  files.md  healthcheck.md  installation.md  rules.md  scripting.md
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  all_34.js  (+105 more)
docs/src/: SUMMARY.md  api.md  auth.md  configuration.md  contributing.md  install.md  intro.md  realtime.md
examples/: CMakeLists.txt  main.cpp
examples/api_keys/: main.cpp
examples/basic_server/: main.cpp
examples/multi_instance/: main.cpp
examples/oauth_flow/: main.cpp
include/mantisbase/: config.hpp.in  export.h  mantis.h  mantisbase.h
include/mantisbase/core/: api_keys.h  auth.h  context_store.h  database.h  exceptions.h  expr_evaluator.h  files.h  http.h  kv_store.h  logger.h  middlewares.h  oauth.h  realtime.h  route_registry.h  router.h  sse.h  types.h  ws.h
include/mantisbase/utils/: crypto_utils.h  snowflake.hpp  soci_wrappers.h  utils.h  uuidv7.h
migrations/: 001_initial.sql
migrations/postgres/: 20240509120000_initial.sql  20260215120000_mb_admin_flags.sql
public/mb/: index.html
src/: cli.rs  config.rs  core.rs  db.rs  lib.rs  logger.rs  main.cpp  main.rs  mantisbase.cpp  models.rs  parse_cmd.cpp  realtime.rs  scripts.rs  util_paths.rs  util_time.rs  webhooks.rs
src/auth/: mod.rs
src/core/: api_keys.cpp  auth.cpp  context_store.cpp  database.cpp  exceptions.cpp  expr_evaluator.cpp  files.cpp  http.cpp  http_content_reader.cpp  http_request.cpp  http_response.cpp  kv_store.cpp  logger.cpp  middlewares.cpp  oauth.cpp  realtime.cpp  realtime_ws.cpp  route_registry.cpp  router.cpp  router_api_keys.cpp  router_httplib_internals.cpp  router_internals.cpp  router_oauth.cpp  sse.cpp  sse_mgr.cpp  sse_session.cpp
src/core/logger/: log_database.cpp  logger.cpp
src/core/models/: access_rules.cpp  entity.cpp  entity_crud.cpp  entity_routes_handlers.cpp  entity_schema.cpp  entity_schema_base_fields.cpp  entity_schema_crud.cpp  entity_schema_field.cpp  entity_schema_routes_handlers.cpp  validators.cpp
src/core/private-impl/: duktape_wrapper.cpp
src/files/: mod.rs
src/http/: admins.rs  auth.rs  entities.rs  error.rs  jwt.rs  logging.rs  login.rs  meta.rs  mod.rs  openapi.rs  schemas.rs  settings.rs  setup.rs  sys.rs  webhooks.rs
src/mail/: mod.rs  smtp_impl.rs
src/models/: admin.rs  entity.rs  mod.rs  schema.rs  types.rs
src/storage/: catalog.rs  ddl.rs  dir_migrate.rs  error.rs  libsql.rs  migrate.rs  mod.rs  postgres.rs  schema_alter.rs  schema_migration.rs  store.rs
src/utils/: auth_utils.cpp  crypto_utils.cpp  date_utils.cpp  dukglue_utils_bindings.cpp  path_utils.cpp  string_utils.cpp
tests/: CMakeLists.txt  TEST_ANALYSIS.md  http_smoke.rs  main.cpp  postgres_store.rs  test_fixure.cpp  test_fixure.h
tests/bench/: CMakeLists.txt  bench_crud.cpp  bench_http.cpp  bench_sse.cpp
tests/common/: test_config.h  test_environment.h  test_helpers.h  test_http_client.h
tests/integration/: test_access_permissions_base.cpp  test_api_endpoints.cpp  test_integration_auth.cpp  test_integration_crud.cpp  test_integration_multi_instance.cpp  test_integration_schema.cpp  test_integration_sse.cpp  test_integration_ws.cpp
tests/unit/: main.cpp  test_access_rules.cpp  test_api_keys.cpp  test_context_store.cpp  test_database.cpp  test_entity_schema_field.cpp  test_expr_eval.cpp  test_files_security.cpp  test_ip_validation.cpp  test_jwt.cpp  test_models.cpp  test_oauth.cpp
(+10 files in other folders)
