[package]
name = "mantisbase"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "Lightweight, fast, single-binary backend system"
default-run = "mantisbase"

[lib]
name = "mantisbase"
path = "src/lib.rs"

[[bin]]
name = "mantisbase"
path = "src/main.rs"

[features]
default = []
postgres = ["dep:sqlx"]
smtp = ["dep:lettre"]
embed-js = ["dep:rquickjs"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
spdlog-rs = "0.5"
libsql = "0.6"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"

sqlx = { version = "0.8", optional = true, default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time",
    "json",
] }

lettre = { version = "0.11", optional = true, default-features = false, features = [
    "tokio1-native-tls",
    "smtp-transport",
    "builder",
] }

rquickjs = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
